--- a/SubscriptionManager/_Imports.razor
+++ b/SubscriptionManager/_Imports.razor
@@ -2,3 +2,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using SubscriptionManager
+@using SubscriptionManager.Components
+@using Syncfusion.Blazor.Cards
