--- a/SubscriptionManager/Pages/_Host.cshtml
+++ b/SubscriptionManager/Pages/_Host.cshtml
@@ -10,6 +10,8 @@
     <base href="~/" />
     <link href="css/site.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
